# simple_rest

simple_rest/: Cargo.toml  dockerfile
simple_rest/src/: main.rs
