[package]
name = "simple_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.13"
serde_json = "1.0"
once_cell = "1.12.0"
tokio = {version = "1.19.2", features = ["full"] }
serde = "1.0.137"
serde_derive = "1.0.137"
actix = "0.13.0"
actix-web = "4.1.0"
log = "0.4.17"
env_logger = "0.9.0"